--- a/src/App.css
+++ b/src/App.css
@@ -40,14 +40,26 @@ body {
   align-items: center;
 }
 
-.profile-image {
-  width: 80px;
+.image-container {
+  width: 96px;
+  height: 96px;
   border-radius: 50%;
+  overflow: hidden;
+  display: flex; 
+  align-items: center;
+  justify-content: center;
+}
+
+.profile-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .username {
-  font-size: 1.2em;
+  font-size: 2em;
   text-align: center;
+  color: white;
 }
 
 .links {
